[package]
name = "rid"
version = "0.1.0"
edition = "2024"

[dependencies]
clippy = "0.0.302"
fmt = "0.1.0"
glob = "0.3.3"
json = "0.12.4"
nix = { version = "0.31.3", features = ["process", "signal","fs","reboot"] }

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]
